# can-types

./: .gitignore  Cargo.toml  LICENSE  README.md  regressions
.github/workflows/: rust.yml
benches/: id.rs
src/: address.rs  conversion.rs  data.rs  id.rs  identifier.rs  lib.rs  message.rs  name.rs  payload.rs  pgn.rs
src/protocol/: mod.rs
src/protocol/can2_a/: identifier.rs  mod.rs
src/protocol/can2_b/: identifier.rs  mod.rs
src/protocol/j1939/: address.rs  identifier.rs  mod.rs  pgn.rs
tests/: identifier.regressions  identifier.rs
