[package]
name = "can-types"
version = "0.1.10"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.83", default-features = false}
base16ct = { version = "0.2.0", default-features = false }
bitfield-struct = {version = "0.6.1", default-features = false}
const-hex = { version = "1.12.0", default-features = false }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "id"
harness = false
