[package]
name = "can-types"
version = "0.9.1"
authors = ["Nathan Keough <nhkeoug@gmail.com>"]
edition = "2021"
keywords = ["can", "vehicle", "j1939", "decode", "ecu"]
readme = "README.md"
repository = "https://github.com/natkeo559/can-types"
homepage = "https://github.com/natkeo559/can-types"
documentation = "https://docs.rs/can-types"
categories = ["no-std"]
description = """
A library for encoding/decoding simple CAN bus data structures
"""
exclude = ["/tests", "/.github"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = {version = "1.0.83", default-features = false}
bitfield-struct = {version = "0.8.0", default-features = false}

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "id"
harness = false
